--- a/src/app/home/components/footer/footer.component.css
+++ b/src/app/home/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
   padding: 7px;
   background-color: darkgrey;
-  position: fixed;
+  position:relative; 
   bottom: 0;
   right: 0;
   width: 100%;
@@ -11,4 +11,5 @@ footer {
   right: 0;
   font-family: "cursive";
   font-weight: bold;
+  font-size: larger;
 }
