--- a/src/app/home/user/components/detail/detail.component.html
+++ b/src/app/home/user/components/detail/detail.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4" style="width: 70%">
+<div class="container mt-5" style="width: 70%;margin-bottom: 50px;">
   <div class="row">
     <div class="col-md-12">
       <div class="d-flex justify-content-between align-items-center mb-3">
@@ -113,7 +113,7 @@
             ><input type="text" class="form-control" value="{{getValue.goalPerWeek}}" readonly/>
           </div>
         </div>
-        <div class="mt-4 text-center">
+        <div class="mt-5 text-center">
           <button class="btn btn-primary profile-button" type="button">
             Save Profile
           </button>
